# foundation-source

./: .gitignore  CMakeLists.txt  config.h  config.h.in  root.proj
corec/: CMakeLists.txt  default_config.h
corec/corec/: CMakeLists.txt  confhelper.h  corec_config.h.in  portab.h
corec/corec/helpers/: CMakeLists.txt
corec/corec/helpers/charconvert/: charconvert.proj
corec/corec/helpers/date/: date.proj
corec/corec/helpers/file/: file.proj  file_win32.c
corec/corec/helpers/parser/: parser2.c
corec/corec/helpers/zlib/: CMakeLists.txt  gzguts.h  zlib.proj
corec/corec/node/: node.c  node.h  nodebase.h
corec/corec/str/: str.c
corec/tests/: CMakeLists.txt  tests.proj
corec/tools/coremake/: commands.txt  config.h  config_helper.h  coremake.c  evc.inc  gcc_conf.inc  gcc_mak.inc  osx_plist.inc  vc6.inc  vcxproj.inc  vs.inc  vsproj.inc
libebml2/: CMakeLists.txt  config.h.in  ebml2_project.h.in  ebml_config.h.in  ebmlbinary.c  ebmlcrc.c  ebmldate.c  ebmlelement.c  ebmlmain.c  ebmlmaster.c  ebmlnumber.c  ebmlstring.c  ebmlvoid.c  libebml2.proj
libebml2/ebml/: ebml.h
libebml2/ebml2/: ebml.h
libebml2/legacy/: ebml2_legacy_project.h.in  legacy.cpp
libebml2/legacy/ebml/: EbmlBinary.h  EbmlDate.h  EbmlElement.h  EbmlFloat.h  EbmlMaster.h  EbmlSInteger.h  EbmlStream.h  EbmlString.h  EbmlUInteger.h  EbmlUnicodeString.h  EbmlVoid.h
libebml2/test/: ebmltree.c
libmatroska2/: CMakeLists.txt  config.h.in  libmatroska2.proj  matroska2_project.h.in  matroska_config.h.in  matroska_internal.h  matroska_sem.c  matroskablock.c  matroskamain.c
libmatroska2/MatroskaParser/: MatroskaParser.c  MatroskaParser.h
libmatroska2/bzip2/: CMakeLists.txt
libmatroska2/lzokay/: CMakeLists.txt  README.md  lzokay.c  lzokay.cpp  lzokay.h  lzokay.hpp  test.c  test.cpp
libmatroska2/lzokay/lzokay-c/: lzokay-c.cpp  lzokay-c.h
libmatroska2/matroska/: matroska.h
libmatroska2/matroska2/: matroska.h  matroska_sem.h
libmatroska2/minilzo/: CMakeLists.txt
libmatroska2/test/: mkvtree.c  testlzokay.c
mkclean/: CMakeLists.txt  ChangeLog.txt  config.h.in  default_config.h  mkclean.c  mkclean.proj  mkclean_project.h.in
mkclean/regression/: CMakeLists.txt  mkcleanreg.c  mkcleanreg_project.h.in  regression.mkc  regression.proj  run-2971f4ce2dd2e1261d6d0681dd9340788000a2d8.txt
mkclean/tremor/: CMakeLists.txt  config_types.h  info.c  os_types.h
mkparts/: CMakeLists.txt  config.h.in  default_config.h  mkparts.c  mkparts.proj  mkparts_project.h.in
mkvalidator/: CMakeLists.txt  config.h.in  default_config.h  mkvalidator.c  mkvalidator.proj  mkvalidator_project.h.in  pkg.sh.in
spectool/: CMakeLists.txt  config.h.in  data2lib.c  data2lib2.c  data2spec.c  default_config.h  matroska.org_spec.xml  schema_2_kaxsematic_cpp.xsl  schema_2_kaxsematic_h.xsl  schema_2_matroska_sem_c.xsl  schema_2_matroska_sem_h.xsl  spec2data.c  spec_element.c  spec_element.h  spectool.proj  tabler.c
