# zlib library API
add_library("zlib" INTERFACE)
set(ZLIB_GROUP_HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/crc32.h
  ${CMAKE_CURRENT_SOURCE_DIR}/inffast.h
  ${CMAKE_CURRENT_SOURCE_DIR}/inffixed.h
  ${CMAKE_CURRENT_SOURCE_DIR}/inflate.h
  ${CMAKE_CURRENT_SOURCE_DIR}/inftrees.h
  ${CMAKE_CURRENT_SOURCE_DIR}/zconf.h
  ${CMAKE_CURRENT_SOURCE_DIR}/zlib.h
  ${CMAKE_CURRENT_SOURCE_DIR}/zutil.h
)
set(ZLIB_GROUP_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/adler32.c
  ${CMAKE_CURRENT_SOURCE_DIR}/crc32.c
  ${CMAKE_CURRENT_SOURCE_DIR}/inffast.c
  ${CMAKE_CURRENT_SOURCE_DIR}/inflate.c
  ${CMAKE_CURRENT_SOURCE_DIR}/inftrees.c
  ${CMAKE_CURRENT_SOURCE_DIR}/uncompr.c
  ${CMAKE_CURRENT_SOURCE_DIR}/zutil.c
)
target_sources("zlib" INTERFACE ${ZLIB_GROUP_SOURCES} ${ZLIB_GROUP_HEADERS})
if(${CMAKE_VERSION}` VERSION_GREATER_EQUAL "3.15.0")
  set_target_properties("zlib" PROPERTIES 
    PUBLIC_  ${CMAKE_CURRENT_SOURCE_DIR}/"${COREC_BASE_HEADERS}"
  )
endif()
